# FileScanner

./: .gitignore  main.go
.github/workflows/: build_and_release.yml  main.yml
lang/go/: file_data.json  go.mod
lang/rust/: Cargo.toml
lang/rust/src/: main.rs
